[build-system]
requires = [
    "setuptools >= 77.0.3",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "physiodsp"
description = "A comprehensive Python library for processing and analyzing physiological sensor data"
dynamic = ["readme", "version"]
requires-python = ">=3.11"
authors = [
    {name = "Matteo Serafino", email = "example@gmail.com"}
]
license = {text = "GPL-3.0-only"}
keywords = ["physiological", "signal processing", "wearable", "sensors", "activity", "heart rate", "ECG"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "pydantic>=2.12.0"
]

[project.urls]
"Homepage" = "https://github.com/matteo-serafino/physiodsp"
"Documentation" = "https://github.com/matteo-serafino/physiodsp"
"Repository" = "https://github.com/matteo-serafino/physiodsp"
"Issues" = "https://github.com/matteo-serafino/physiodsp"

[tool.setuptools]
packages = ["physiodsp"]

[tool.setuptools.dynamic]
readme = {file=["README.md"], content-type="text/markdown"}
version = {attr = "physiodsp._version.__version__"}

[tool.setuptools.package-data]
physiodsp = ["py.typed"]